Add article with img

--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./style.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap"
+      rel="stylesheet"
+    />
     <title>Ecolo Clean</title>
   </head>
   <body>
@@ -158,5 +162,15 @@
         </svg>
       </nav>
     </header>
+    <article>
+      <figure>
+        Z dbałością o każdy szczegół
+      </figure>
+    </article>
+    <!-- <footer>
+      <ul>
+        <li>ECOLO clean</li>
+      </ul>
+    </footer> -->
   </body>
 </html>
