--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
     </header>
     <article>
       <figure>
-        Z dbałością o każdy szczegół
+        <h1>Z dbałością o każdy szczegół</h1>
       </figure>
     </article>
     <!-- <footer>
