--- a/index.html
+++ b/index.html
@@ -171,9 +171,8 @@
       </figure>
     </section>
     <article id="content">
-      <h1>Wrocław House Cleaning</h1>
-      
       <form action="/">
+        <span id='content-title'>Wrocław House Cleaning</span>
         <input type="text" pattern="[0-9]{2}\-[0-9]{3}" placeholder="Kod pocztowy" title="Format XX-XXX">
         <span>Tell us about your place</span>
         <div class="rooms-bathrooms">
@@ -188,26 +187,22 @@
         </div>
         <span>Rekomendujemy 3 godziny</span>
         <select name="numOfHours" id="numOfHours">
-          <option value="1">1</option>
-          <option value="1.5">1.5</option>
-          <option value="2">2</option>
-          <option value="2.5">2.5</option>
           <option value="3" selected>3</option>
           <option value="3.5">3.5</option>
           <option value="4">4</option>
           <option value="4.5">4.5</option>
           <option value="5">5</option>
+          <option value="5.5">5.5</option>
+          <option value="6">6</option>
+          <option value="6.5">6.5</option>
+          <option value="7">7</option>
+          <option value="7.5">7.5</option>
+          <option value="8">8</option>
         </select>
         <span>When would you like us to come?</span>
         <input type="date">
         <select name="hour" id="hour">
-          <option value="00:00">00:00</option>
-          <option value="01:00">01:00</option>
-          <option value="02:00">02:00</option>
-          <option value="03:00">03:00</option>
-          <option value="04:00">04:00</option>
-          <option value="05:00">05:00</option>
-          <option value="06:00">06:00</option>
+          <option value="06:00" selected>06:00</option>
           <option value="07:00">07:00</option>
           <option value="08:00">08:00</option>
           <option value="09:00">09:00</option>
