--- a/index.html
+++ b/index.html
@@ -165,25 +165,20 @@
         </svg>
       </nav>
     </header>
-    <section>
-      <figure>
-        <h1>Z dbałością o każdy szczegół</h1>
-      </figure>
-    </section>
     <article id="content">
       <form action="/">
         <span id='content-title'>Wrocław House Cleaning</span>
         <input type="text" pattern="[0-9]{2}\-[0-9]{3}" placeholder="Kod pocztowy" title="Format XX-XXX">
         <span>Tell us about your place</span>
         <div class="rooms-bathrooms">
-            <button> - </button>
-            <span> 1 pokój </span>
-            <button> + </button>
+            <button class="btn-left"> - </button>
+            <span class="text-between-btn"> 1 pokój </span>
+            <button class="btn-right"> + </button>
         </div>
         <div class="rooms-bathrooms">
-          <button> - </button>
-          <span> 1 łazienka </span>
-          <button> + </button>
+          <button class="btn-left"> - </button>
+          <span class="text-between-btn"> 1 łazienka </span>
+          <button class="btn-right"> + </button>
         </div>
         <span>Rekomendujemy 3 godziny</span>
         <select name="numOfHours" id="numOfHours">
@@ -214,6 +209,11 @@
 
       </form>
     </article>
+    <section>
+      <figure>
+        <h1>Z dbałością o każdy szczegół</h1>
+      </figure>
+    </section>
     <article id="numbers">
       <h1>Posprzątaliśmy </br>już ponad:</h1>
       <div>
